# iPilot

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: OpenClaw 心跳机制解析.md  iPilot_LightRAG_MCP_手敲施工教程.md  langchain_langgraph.md  learning_note.md  parity_checklist.md  report-lightrag.md  report-openkag.md  temp.md
docs/langchain_langgraph_tutorial/: 01_依赖与版本基线.md  02_模型层迁移到_LangChain.md  03_工具层迁移到_LangChain_Tools.md  04_create_agent_最小闭环.md  05_用_LangGraph_重写_AgentLoop.md  06_接回_iPilot_外层入口.md  07_interrupt_resume_与_v2_高级篇.md  README.md
docs/lightrag_mcp_tutorial/: 01_现有主链与插入点.md  02_LightRAG_MCP_Server_完整代码.md  03_iPilot_侧_MCP_Client_与桥接完整代码.md  04_接入运行时_与工具聚合层.md  05_测试矩阵_联调顺序_常见坑.md
ipilot/: __init__.py  __main__.py  core.py  runtime.py
ipilot/agent/: context.py  graph_runtime.py  hook.py  langchain_tools.py  loop.py  memory.py  middleware.py  models.py  runtime_context.py  skills.py  toolset.py  types.py
ipilot/api/: server.py
ipilot/bus/: events.py  queue.py
ipilot/channels/: base.py  manager.py  twitch.py
ipilot/cli/: commands.py
ipilot/config/: loader.py  paths.py  schema.py
ipilot/cron/: service.py  types.py
ipilot/heartbeat/: service.py
ipilot/mcp/: __init__.py  bridge.py  client.py  models.py
ipilot/providers/: __init__.py  base.py  (+2 more)
memory/: MEMORY.md
tests/: conftest.py  ping_llm.ps1  test_agent_loop.py  test_agent_toolset.py  test_api_server.py  test_cli_commands.py  test_config_loader.py  test_cron_and_heartbeat.py  test_graph_runtime.py  test_lightrag_service.py  test_mcp_bridge.py  test_mcp_client.py  test_package_exports.py  test_provider_openai_compat.py  test_runtime_toolset.py  test_twitch_channel.py
(+11 files in other folders)
