[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipilot-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "croniter>=6.2.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "typer>=0.12.0",
    "uvicorn>=0.43.0",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
    "langchain==1.2.15",
    "langgraph==1.1.6",
    "langchain-openai==1.1.8",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-sqlite==3.0.3",
    "mcp[cli]>=1.27.0",
    "lightrag-hku>=1.4.13",
]

[project.scripts]
ipilot = "ipilot.cli.commands:app"

[tool.setuptools.packages.find]
include = ["ipilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
